// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectMFAType test render test render with totpsetup and with all mfa types and select message 1`] = `
<div>
  <Component
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "amazonSignInButton": Object {},
        "button": Object {},
        "container": Object {},
        "facebookSignInButton": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "googleSignInButton": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "label": Object {},
        "nav": Object {},
        "navBar": Object {},
        "navButton": Object {},
        "navItem": Object {},
        "navRight": Object {},
        "oAuthSignInButton": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
        "toast": Object {},
      }
    }
  >
    <Component
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
    >
      Select MFA Type
    </Component>
    <Component
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
    >
      <div>
        <Component
          key="sms"
          name="MFAType"
          onChange={[Function]}
          placeholder="SMS"
          theme={
            Object {
              "a": Object {},
              "actionRow": Object {},
              "amazonSignInButton": Object {},
              "button": Object {},
              "container": Object {},
              "facebookSignInButton": Object {},
              "formContainer": Object {},
              "formField": Object {},
              "formRow": Object {},
              "formSection": Object {},
              "googleSignInButton": Object {},
              "hint": Object {},
              "input": Object {},
              "inputLabel": Object {},
              "label": Object {},
              "nav": Object {},
              "navBar": Object {},
              "navButton": Object {},
              "navItem": Object {},
              "navRight": Object {},
              "oAuthSignInButton": Object {},
              "photoPickerButton": Object {},
              "photoPlaceholder": Object {},
              "radio": Object {},
              "sectionBody": Object {},
              "sectionFooter": Object {},
              "sectionFooterPrimaryContent": Object {},
              "sectionFooterSecondaryContent": Object {},
              "sectionHeader": Object {},
              "signInButton": Object {},
              "signInButtonContent": Object {},
              "signInButtonIcon": Object {},
              "strike": Object {},
              "strikeContent": Object {},
              "toast": Object {},
            }
          }
          value="SMS"
        />
        <Component
          key="totp"
          name="MFAType"
          onChange={[Function]}
          placeholder="TOTP"
          theme={
            Object {
              "a": Object {},
              "actionRow": Object {},
              "amazonSignInButton": Object {},
              "button": Object {},
              "container": Object {},
              "facebookSignInButton": Object {},
              "formContainer": Object {},
              "formField": Object {},
              "formRow": Object {},
              "formSection": Object {},
              "googleSignInButton": Object {},
              "hint": Object {},
              "input": Object {},
              "inputLabel": Object {},
              "label": Object {},
              "nav": Object {},
              "navBar": Object {},
              "navButton": Object {},
              "navItem": Object {},
              "navRight": Object {},
              "oAuthSignInButton": Object {},
              "photoPickerButton": Object {},
              "photoPlaceholder": Object {},
              "radio": Object {},
              "sectionBody": Object {},
              "sectionFooter": Object {},
              "sectionFooterPrimaryContent": Object {},
              "sectionFooterSecondaryContent": Object {},
              "sectionHeader": Object {},
              "signInButton": Object {},
              "signInButtonContent": Object {},
              "signInButtonIcon": Object {},
              "strike": Object {},
              "strikeContent": Object {},
              "toast": Object {},
            }
          }
          value="TOTP"
        />
        <Component
          key="noMFA"
          name="MFAType"
          onChange={[Function]}
          placeholder="No MFA"
          theme={
            Object {
              "a": Object {},
              "actionRow": Object {},
              "amazonSignInButton": Object {},
              "button": Object {},
              "container": Object {},
              "facebookSignInButton": Object {},
              "formContainer": Object {},
              "formField": Object {},
              "formRow": Object {},
              "formSection": Object {},
              "googleSignInButton": Object {},
              "hint": Object {},
              "input": Object {},
              "inputLabel": Object {},
              "label": Object {},
              "nav": Object {},
              "navBar": Object {},
              "navButton": Object {},
              "navItem": Object {},
              "navRight": Object {},
              "oAuthSignInButton": Object {},
              "photoPickerButton": Object {},
              "photoPlaceholder": Object {},
              "radio": Object {},
              "sectionBody": Object {},
              "sectionFooter": Object {},
              "sectionFooterPrimaryContent": Object {},
              "sectionFooterSecondaryContent": Object {},
              "sectionHeader": Object {},
              "signInButton": Object {},
              "signInButtonContent": Object {},
              "signInButtonIcon": Object {},
              "strike": Object {},
              "strikeContent": Object {},
              "toast": Object {},
            }
          }
          value="NOMFA"
        />
      </div>
    </Component>
    <Component
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
    >
      <Component
        onClick={[Function]}
        theme={
          Object {
            "a": Object {},
            "actionRow": Object {},
            "amazonSignInButton": Object {},
            "button": Object {},
            "container": Object {},
            "facebookSignInButton": Object {},
            "formContainer": Object {},
            "formField": Object {},
            "formRow": Object {},
            "formSection": Object {},
            "googleSignInButton": Object {},
            "hint": Object {},
            "input": Object {},
            "inputLabel": Object {},
            "label": Object {},
            "nav": Object {},
            "navBar": Object {},
            "navButton": Object {},
            "navItem": Object {},
            "navRight": Object {},
            "oAuthSignInButton": Object {},
            "photoPickerButton": Object {},
            "photoPlaceholder": Object {},
            "radio": Object {},
            "sectionBody": Object {},
            "sectionFooter": Object {},
            "sectionFooterPrimaryContent": Object {},
            "sectionFooterSecondaryContent": Object {},
            "sectionHeader": Object {},
            "signInButton": Object {},
            "signInButtonContent": Object {},
            "signInButtonIcon": Object {},
            "strike": Object {},
            "strikeContent": Object {},
            "toast": Object {},
          }
        }
      >
        Verify
      </Component>
    </Component>
  </Component>
  <TOTPSetupComp
    MFATypes={
      Object {
        "Optional": true,
        "SMS": true,
        "TOTP": true,
      }
    }
  />
</div>
`;

exports[`SelectMFAType test render test render without totpsetup and with 2 mfa types 1`] = `
<div>
  <Component
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "amazonSignInButton": Object {},
        "button": Object {},
        "container": Object {},
        "facebookSignInButton": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "googleSignInButton": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "label": Object {},
        "nav": Object {},
        "navBar": Object {},
        "navButton": Object {},
        "navItem": Object {},
        "navRight": Object {},
        "oAuthSignInButton": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
        "toast": Object {},
      }
    }
  >
    <Component
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
    >
      Select MFA Type
    </Component>
    <Component
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
    >
      <div>
        <Component
          key="sms"
          name="MFAType"
          onChange={[Function]}
          placeholder="SMS"
          theme={
            Object {
              "a": Object {},
              "actionRow": Object {},
              "amazonSignInButton": Object {},
              "button": Object {},
              "container": Object {},
              "facebookSignInButton": Object {},
              "formContainer": Object {},
              "formField": Object {},
              "formRow": Object {},
              "formSection": Object {},
              "googleSignInButton": Object {},
              "hint": Object {},
              "input": Object {},
              "inputLabel": Object {},
              "label": Object {},
              "nav": Object {},
              "navBar": Object {},
              "navButton": Object {},
              "navItem": Object {},
              "navRight": Object {},
              "oAuthSignInButton": Object {},
              "photoPickerButton": Object {},
              "photoPlaceholder": Object {},
              "radio": Object {},
              "sectionBody": Object {},
              "sectionFooter": Object {},
              "sectionFooterPrimaryContent": Object {},
              "sectionFooterSecondaryContent": Object {},
              "sectionHeader": Object {},
              "signInButton": Object {},
              "signInButtonContent": Object {},
              "signInButtonIcon": Object {},
              "strike": Object {},
              "strikeContent": Object {},
              "toast": Object {},
            }
          }
          value="SMS"
        />
        <Component
          key="totp"
          name="MFAType"
          onChange={[Function]}
          placeholder="TOTP"
          theme={
            Object {
              "a": Object {},
              "actionRow": Object {},
              "amazonSignInButton": Object {},
              "button": Object {},
              "container": Object {},
              "facebookSignInButton": Object {},
              "formContainer": Object {},
              "formField": Object {},
              "formRow": Object {},
              "formSection": Object {},
              "googleSignInButton": Object {},
              "hint": Object {},
              "input": Object {},
              "inputLabel": Object {},
              "label": Object {},
              "nav": Object {},
              "navBar": Object {},
              "navButton": Object {},
              "navItem": Object {},
              "navRight": Object {},
              "oAuthSignInButton": Object {},
              "photoPickerButton": Object {},
              "photoPlaceholder": Object {},
              "radio": Object {},
              "sectionBody": Object {},
              "sectionFooter": Object {},
              "sectionFooterPrimaryContent": Object {},
              "sectionFooterSecondaryContent": Object {},
              "sectionHeader": Object {},
              "signInButton": Object {},
              "signInButtonContent": Object {},
              "signInButtonIcon": Object {},
              "strike": Object {},
              "strikeContent": Object {},
              "toast": Object {},
            }
          }
          value="TOTP"
        />
      </div>
    </Component>
    <Component
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
    >
      <Component
        onClick={[Function]}
        theme={
          Object {
            "a": Object {},
            "actionRow": Object {},
            "amazonSignInButton": Object {},
            "button": Object {},
            "container": Object {},
            "facebookSignInButton": Object {},
            "formContainer": Object {},
            "formField": Object {},
            "formRow": Object {},
            "formSection": Object {},
            "googleSignInButton": Object {},
            "hint": Object {},
            "input": Object {},
            "inputLabel": Object {},
            "label": Object {},
            "nav": Object {},
            "navBar": Object {},
            "navButton": Object {},
            "navItem": Object {},
            "navRight": Object {},
            "oAuthSignInButton": Object {},
            "photoPickerButton": Object {},
            "photoPlaceholder": Object {},
            "radio": Object {},
            "sectionBody": Object {},
            "sectionFooter": Object {},
            "sectionFooterPrimaryContent": Object {},
            "sectionFooterSecondaryContent": Object {},
            "sectionHeader": Object {},
            "signInButton": Object {},
            "signInButtonContent": Object {},
            "signInButtonIcon": Object {},
            "strike": Object {},
            "strikeContent": Object {},
            "toast": Object {},
          }
        }
      >
        Verify
      </Component>
    </Component>
  </Component>
</div>
`;

exports[`SelectMFAType test render test render without totpsetup and with all mfa types and select message 1`] = `
<div>
  <Component
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "amazonSignInButton": Object {},
        "button": Object {},
        "container": Object {},
        "facebookSignInButton": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "googleSignInButton": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "label": Object {},
        "nav": Object {},
        "navBar": Object {},
        "navButton": Object {},
        "navItem": Object {},
        "navRight": Object {},
        "oAuthSignInButton": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
        "toast": Object {},
      }
    }
  >
    <Component
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
    >
      Select MFA Type
    </Component>
    <Component
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
    >
      <div>
        <Component
          key="sms"
          name="MFAType"
          onChange={[Function]}
          placeholder="SMS"
          theme={
            Object {
              "a": Object {},
              "actionRow": Object {},
              "amazonSignInButton": Object {},
              "button": Object {},
              "container": Object {},
              "facebookSignInButton": Object {},
              "formContainer": Object {},
              "formField": Object {},
              "formRow": Object {},
              "formSection": Object {},
              "googleSignInButton": Object {},
              "hint": Object {},
              "input": Object {},
              "inputLabel": Object {},
              "label": Object {},
              "nav": Object {},
              "navBar": Object {},
              "navButton": Object {},
              "navItem": Object {},
              "navRight": Object {},
              "oAuthSignInButton": Object {},
              "photoPickerButton": Object {},
              "photoPlaceholder": Object {},
              "radio": Object {},
              "sectionBody": Object {},
              "sectionFooter": Object {},
              "sectionFooterPrimaryContent": Object {},
              "sectionFooterSecondaryContent": Object {},
              "sectionHeader": Object {},
              "signInButton": Object {},
              "signInButtonContent": Object {},
              "signInButtonIcon": Object {},
              "strike": Object {},
              "strikeContent": Object {},
              "toast": Object {},
            }
          }
          value="SMS"
        />
        <Component
          key="totp"
          name="MFAType"
          onChange={[Function]}
          placeholder="TOTP"
          theme={
            Object {
              "a": Object {},
              "actionRow": Object {},
              "amazonSignInButton": Object {},
              "button": Object {},
              "container": Object {},
              "facebookSignInButton": Object {},
              "formContainer": Object {},
              "formField": Object {},
              "formRow": Object {},
              "formSection": Object {},
              "googleSignInButton": Object {},
              "hint": Object {},
              "input": Object {},
              "inputLabel": Object {},
              "label": Object {},
              "nav": Object {},
              "navBar": Object {},
              "navButton": Object {},
              "navItem": Object {},
              "navRight": Object {},
              "oAuthSignInButton": Object {},
              "photoPickerButton": Object {},
              "photoPlaceholder": Object {},
              "radio": Object {},
              "sectionBody": Object {},
              "sectionFooter": Object {},
              "sectionFooterPrimaryContent": Object {},
              "sectionFooterSecondaryContent": Object {},
              "sectionHeader": Object {},
              "signInButton": Object {},
              "signInButtonContent": Object {},
              "signInButtonIcon": Object {},
              "strike": Object {},
              "strikeContent": Object {},
              "toast": Object {},
            }
          }
          value="TOTP"
        />
        <Component
          key="noMFA"
          name="MFAType"
          onChange={[Function]}
          placeholder="No MFA"
          theme={
            Object {
              "a": Object {},
              "actionRow": Object {},
              "amazonSignInButton": Object {},
              "button": Object {},
              "container": Object {},
              "facebookSignInButton": Object {},
              "formContainer": Object {},
              "formField": Object {},
              "formRow": Object {},
              "formSection": Object {},
              "googleSignInButton": Object {},
              "hint": Object {},
              "input": Object {},
              "inputLabel": Object {},
              "label": Object {},
              "nav": Object {},
              "navBar": Object {},
              "navButton": Object {},
              "navItem": Object {},
              "navRight": Object {},
              "oAuthSignInButton": Object {},
              "photoPickerButton": Object {},
              "photoPlaceholder": Object {},
              "radio": Object {},
              "sectionBody": Object {},
              "sectionFooter": Object {},
              "sectionFooterPrimaryContent": Object {},
              "sectionFooterSecondaryContent": Object {},
              "sectionHeader": Object {},
              "signInButton": Object {},
              "signInButtonContent": Object {},
              "signInButtonIcon": Object {},
              "strike": Object {},
              "strikeContent": Object {},
              "toast": Object {},
            }
          }
          value="NOMFA"
        />
      </div>
    </Component>
    <Component
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
    >
      <Component
        onClick={[Function]}
        theme={
          Object {
            "a": Object {},
            "actionRow": Object {},
            "amazonSignInButton": Object {},
            "button": Object {},
            "container": Object {},
            "facebookSignInButton": Object {},
            "formContainer": Object {},
            "formField": Object {},
            "formRow": Object {},
            "formSection": Object {},
            "googleSignInButton": Object {},
            "hint": Object {},
            "input": Object {},
            "inputLabel": Object {},
            "label": Object {},
            "nav": Object {},
            "navBar": Object {},
            "navButton": Object {},
            "navItem": Object {},
            "navRight": Object {},
            "oAuthSignInButton": Object {},
            "photoPickerButton": Object {},
            "photoPlaceholder": Object {},
            "radio": Object {},
            "sectionBody": Object {},
            "sectionFooter": Object {},
            "sectionFooterPrimaryContent": Object {},
            "sectionFooterSecondaryContent": Object {},
            "sectionHeader": Object {},
            "signInButton": Object {},
            "signInButtonContent": Object {},
            "signInButtonIcon": Object {},
            "strike": Object {},
            "strikeContent": Object {},
            "toast": Object {},
          }
        }
      >
        Verify
      </Component>
    </Component>
  </Component>
</div>
`;

exports[`SelectMFAType test render test render without totpsetup and with less than 2 mfa types 1`] = `
<div>
  <div>
    <a>
      less than 2 mfa types available
    </a>
  </div>
</div>
`;
